--- a/templates/icecast.xml.j2
+++ b/templates/icecast.xml.j2
@@ -68,7 +68,7 @@
     <webroot>/usr/share/icecast2/web</webroot>
     <adminroot>/usr/share/icecast2/admin</adminroot>
     <alias source="/" destination="/status.xsl"/>
-{% if ansible_distribution == "Ubuntu" %}
+{% if icecast_require_init_fix %}
     <pidfile>/var/run/icecast2/icecast2.pid</pidfile>
 {% endif %}
   </paths>
